--- a/styles/phone.css
+++ b/styles/phone.css
@@ -42,18 +42,15 @@
 }
 
 /* Inserting images for Games */
-div.imgLeft1 {
-    content: url(../images/Grand_Theft_Auto_V.png);
+div.imgLeft1:before {
     margin-right:auto;
     margin-left:auto;
 }
-div.imgRight1 {
-    content: url(../images/Battlefield_4.png);
+div.imgRight1:before {
     margin-right:auto;
     margin-left:auto;
 }
-div.imgLeft2 {
-    content: url(../images/Call_of_Duty_Ghosts.png);
+div.imgLeft2:before {
     margin-right:auto;
     margin-left:auto;
     
